--- a/app/views/shared/_signed_out_home.html.erb
+++ b/app/views/shared/_signed_out_home.html.erb
@@ -2,7 +2,7 @@
 <p>
 This is the Home Page for Campus Smack
 
-<div class = "colleges">Click On Your Campus Below</div><br>
+<div class = "colleges">Click On A Campus Below</div><br>
 
 <% @colleges.each do |college| %>
 <%= link_to college.name, college %><br>
