--- a/app/views/colleges/show.html.erb
+++ b/app/views/colleges/show.html.erb
@@ -2,11 +2,26 @@
 <h1><%= @college.name %></h1>
 <table class="masthead">
 <tr>
-	<td>
-		Videos | Photos | News | Stats
-	</td>
+		<td>
+			<%= link_to "Videos", college_path(@college, :content_type => "Video")%> 
+			| <%= link_to "Photos", college_path(@college, :content_type => "Photo") %> 
+			| <%= link_to "News"%> 
+			| <%= link_to "Stats" %>
+		</td>
 </tr>
 </table>
+	<table>
+		<tr>
+		<% if signed_in? %>
+			<td width = 10%><%= button_to "Add a Smack", new_user_college_smack_path(@user, @college), :method => :get %>
+							<%= button_to "Add a Redemption", new_user_college_redemption_path(@user, @college), :method => :get %></td>
+	   <% else %>
+			<td width = 10%><%= button_to "Add a Smack", signin_path, :method => :get %>
+							<%= button_to "Add a Redemption", signin_path, :method => :get %></td>
+	   <% end %>
+		</tr>
+	</table>
+
 <% unless @college.posts.empty? %>
   <table class="post" summary="User microposts">
 
