--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,8 @@
 <nav class="round">
 <ul>
 <li><%= link_to "About", about_path %></li>
-<li><%= link_to "Contact", contact_path %></li>
+<li><%= link_to "Contact Us", contact_path %></li>
+<li><%= link_to "Feedback" %></li>
 </ul>
 </nav>
 </footer>
