--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -267,6 +267,8 @@ a:hover { color: #c81419; }
 option {font-size:85%;font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;}
 select {font-size:85%;font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;}
 
+#large_photo {display:none;}
+
 /* Old styling 
 a { color: #09c; text-decoration: none; }
 a:hover { color: #069; text-decoration: underline; }
