added posts index

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,25 @@
-
-<%= render 'shared/masthead1' %>	
-		<h1>All <%= @college.name %> Posts</h1>
-		<table class="masthead">
-		<tr>
-			<td>
-				Videos | Photos | News | Stats
-			</td>
-		</tr>
-		</table>
-		<a><%= button_to "Add a Smack", new_user_college_smack_path(@user, @college), :method => :get %></a>
-		<%= will_paginate(@posts)%>
-		<table class = "post">
-		<%= render @posts %>
-		</table>
+<table class="masthead">
+<tr>
+	<td>
+		    <%= link_to "Home", root_path %> 
+		  | <%= link_to "Smacks", posts_path(:type => "Smack") %>
+		  |	<%= link_to "Redemptions", posts_path(:type => "Redemption") %>
+	</td>
+</tr><br>
+</table>
+<h1>Posts</h1>
+	<table class="masthead">
+	<tr>
+		<td>
+			<%= link_to "Videos", posts_path(:content_type => "Video") %> 
+			| <%= link_to "Photos", posts_path(:content_type => "Photo") %> 
+			| <%= link_to "News"%> 
+			| <%= link_to "Stats" %>
+		</td>
+	</tr>
+	</table>
+<table class = "post">
+<%= render :partial => "/posts/post", :collection => @posts %>
+</table>
+<%= will_paginate(@posts)%>
 
