--- a/app/views/colleges/show.html.erb
+++ b/app/views/colleges/show.html.erb
@@ -1,27 +1,23 @@
 <%= render 'shared/masthead1' %>
 <h1><%= @college.name %></h1>
-<table class="masthead">
-<tr>
-		<td>
-			<%= link_to "Videos", college_path(@college, :content_type => "Video")%> 
-			| <%= link_to "Photos", college_path(@college, :content_type => "Photo") %> 
-			| <%= link_to "News"%> 
-			| <%= link_to "Stats" %>
-		</td>
-</tr>
-</table>
-	<table>
-		<tr>
-		<% if signed_in? %>
-			<td width = 10%><%= button_to "Add a Smack", new_user_college_smack_path(@user, @college), :method => :get %>
-							<%= button_to "Add a Redemption", new_user_college_redemption_path(@user, @college), :method => :get %></td>
-	   <% else %>
-			<td width = 10%><%= button_to "Add a Smack", signin_path, :method => :get %>
-							<%= button_to "Add a Redemption", signin_path, :method => :get %></td>
-	   <% end %>
-		</tr>
-	</table>
+<%= render 'masthead' %>
 
+
+		<% if signed_in? %>
+		<%= link_to "Add a Smack", new_user_college_smack_path(@user, @college), :method => :get, :class => "button" %>    
+		<%= link_to "Add a Redemption", new_user_college_redemption_path(@user, @college), :method => :get, :class => "button" %><br>
+	   <% else %>
+			<%= link_to "Add a Smack", signin_path, :method => :get, :class => "button" %>
+			<%= link_to "Add a Redemption", signin_path, :method => :get, :class => "button" %>
+	   <% end %><br>
+
+	
+	<%= form_for @search, :url => college_path, :html => {:method => :get} do |f| %>
+	  <%= f.label :search %>
+	  <%= f.text_field :title_or_post_summary_contains %>
+	  <%= f.submit "Go!", :name =>nil %>
+	<% end %>
+	
 <% unless @college.posts.empty? %>
   <table class="post" summary="User microposts">
 
