--- a/app/views/colleges/show.html.erb
+++ b/app/views/colleges/show.html.erb
@@ -2,14 +2,13 @@
 <h1><%= @college.name %></h1>
 <%= render 'masthead' %>
 
-
 		<% if signed_in? %>
 		<%= link_to "Add a Smack", new_user_college_smack_path(@user, @college), :method => :get, :class => "button" %>    
 		<%= link_to "Add a Redemption", new_user_college_redemption_path(@user, @college), :method => :get, :class => "button" %><br>
 	   <% else %>
 			<%= link_to "Add a Smack", signin_path, :method => :get, :class => "button" %>
 			<%= link_to "Add a Redemption", signin_path, :method => :get, :class => "button" %>
-	   <% end %><br>
+	   <% end %><br><br>
 
 	
 	<%= form_for @search, :url => college_path, :html => {:method => :get} do |f| %>
