--- a/app/views/shared/_signed_out_home.html.erb
+++ b/app/views/shared/_signed_out_home.html.erb
@@ -1,6 +1,6 @@
-<h1>Campus Smack</h1>
-<p>
-This is the Home Page for Campus Smack
+<h1>Campus Smack</h1> 
+
+	<%=link_to "Sign Up Now!", signup_path, :method => :get, :class => "button" %><br><br><br>
 
 <div class = "colleges">Click On A Campus Below</div><br>
 
