--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -1,23 +1,29 @@
+<% @college = College.all%>
 <%= render 'shared/error_messages', :object => f.object %> 
 <div class="field">
-<%= f.label :username %><br />
+<%= f.label :username, "Username:" %>
 <%= f.text_field :username %> 
 </div>
-<div class="field">
-<%= f.label :first_name %><br />
+<div class="field" id="name">
+<%= f.label :first_name, "First Name:" %>
 <%= f.text_field :first_name %> 
 </div>
-<div class="field">
-<%= f.label :last_name %><br />
+<div class="field" id="name">
+<%= f.label :last_name, "Last Name:" %>
 <%= f.text_field :last_name %> 
+</div><br>
+<div class="field">
+<b>Affiliation:<b>
+<%= f.select(:affiliation, %w{Student Alumni Fan}, {:include_blank => true})  %>
+<b>of<b> <%= f.select(:college, @college.map {|a| [a.name]}, {:include_blank => true})  %>
 </div>
-<div class="field"> <%= f.label :email %><br /> 
+<div class="field"> <%= f.label :email, "Email:" %>
 <%= f.text_field :email %>
 </div> 
 <div class="field">
-<%= f.label :password %><br />
+<%= f.label :password, "Password:"  %>
 <%= f.password_field :password %> 
 </div>
-<div class="field"> <%= f.label :password_confirmation, "Confirmation" %><br /> 
+<div class="field"> <%= f.label :password_confirmation, "Password Confirmation:" %>
 <%= f.password_field :password_confirmation %>
 </div>
