added feedback form

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,8 +2,8 @@
 <nav class="round">
 <ul>
 <li><%= link_to "About", about_path %></li>
-<li><%= link_to "Contact Us", contact_path %></li>
-<li><%= link_to "Feedback" %></li>
+<li><%= link_to "Contact Us", new_support_path %></li>
+<li><%= link_to "Feedback", new_support_path %></li>
 </ul>
 </nav>
 </footer>
