--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,10 @@
 	<%= yield(:head) %>
   </head>
   <body>
-    <div class="container">
-      <%= render 'layouts/header' %>
-      <section class="round">
-        <% flash.each do |key, value| %>
-          <%= content_tag(:div, value, :class => "flash #{key}") %>
-        <% end %>
-        <%= yield %>
-      </section>
-      <%= render 'layouts/footer' %>
-      <%= debug(params) if Rails.env.development? %>
-    </div>
+	<div class="container">
+		<%= render 'layouts/header' %>
+		</div>
+		<%= render 'layouts/navigation' %>
+ 
   </body>
 </html>
