--- a/app/views/posts/vote_up.js.erb
+++ b/app/views/posts/vote_up.js.erb
@@ -1,2 +1,3 @@
 $("#vote_count_up<%= escape_javascript("#{@post.id}") %>").html('<b><%= "#{@post.votes_for_b}" %><b>')
-$("div.flash").remove();
+$("#vote_count_down<%= escape_javascript("#{@post.id}") %>").html('<b><%= "#{@post.votes_against_b}" %><b>')
+//$("div.flash").remove();
