--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,15 +1,25 @@
-.container {
-width: 1200px;
-}
-body { font-size: 14px; line-height: 1.5em; font-family: Verdana,Helvetica,Arial,sans-serif; background-color: #0A2F5C; }
+#nav_list ul {margin:0; padding:0; list-style:none; width:150px; border-bottom:1px solid #ccc}
+#nav_list ul li {position:relative;}
+#nav_list li ul{position:absolute; left:149px; top:0; display:none;}
+#nav_list ul li a{display:block; text-decoration:none; color:#777; background:#fff; padding:5px; border:1px solid #ccc; border-bottom:0;}
+table.body td#main_app{vertical-align:top; }
+table.body{border-collapse:collapse;}
 
+#nav_list li:hover ul, li.over ul{ display:block; }
+
+/* Fix IE. Hide from IE Mac \*/
+* html div#nav_list ul li { float: left; height: 1% }
+* html div#nav_list li a { height: 1%; }
+/* End */
+
+
+.container {width: 1300px;}
+body { font-size: 14px; line-height: 1.5em; font-family: Verdana,Helvetica,Arial,sans-serif; background-color: #0A2F5C; }
 header {padding-top: 20px;}
 header img { padding: 1em;background: #fff;}
-section {margin-top: 1em;font-size: 120%;padding: 20px;background: #fff;}
+section {font-size: 120%;padding: 20px;background: #fff;}
 section h1 {font-size: 200%;}
-
 h1.user {font-size: 200%;color: #000066;}
-
 
 /* Navigation */
 nav {float: right;}
@@ -28,92 +38,52 @@ a.signup_button {margin-left: auto;margin-right: auto;display: block;text-align:
 .round {
 -moz-border-radius: 10px;
 -webkit-border-radius: 10px;
-border-radius: 10px;
-}
-
+border-radius: 10px;}
 footer { text-align: center; margin-top: 10px; width: 710px; margin-left: auto; margin-right: auto; }
 footer nav {float: none;}
 
 /* User show page */
-
 table.profile {	width: 100%;padding: 1em;}
-
 td.main {width: 70%;padding: 1em;}
-
 td.sidebar {width: 30%;padding: 1em;vertical-align: top;background: #ffc;}
-
 .profile img.gravatar {border: 1px solid #999;margin-bottom: -15px;}
- 
 div.field, div.actions  {margin-bottom: 10px;}
-
 .field_with_errors { margin-top: 10px;padding: 2px;background-color: red;display: table;}
-
 .field_with_errors label {color: #fff;}
-
 #error_explanation {width:  400px;border:  2px solid red;padding:  7px; padding-bottom:  12px;margin-bottom:  20px;background-color: #f0f0f0; }
-
 #error_explanation h2 { text-align: left; font-weight: bold; padding: 5px 5px 5px 15px; font-size: 12px; margin: -7px; background-color: #c00; color: #fff; }
-
 #error_explanation p { color: #333; margin-bottom: 0; padding: 5px;}
-
 #error_explanation ul li { font-size: 12px; list-style: square;}
-
 ul.users {margin-top: 1em;}
-
 .users li {list-style: none;}
-
 h1.micropost {margin-bottom: 0.3em; }
-
 table.microposts {margin-top: 1em; }
 
 /*table.microposts tr {
 height: 70px;
 }*/
-
 table.microposts tr td.gravatar { border-top: 1px solid #ccc; vertical-align: top; width: 50px;}
-
 table.microposts tr td.micropost { border-top: 1px solid #ccc; vertical-align: top; padding-top: 0px;}
-
 table.microposts tr td.micropost span.timestamp { display: block; font-size: 50%; color: #666;} 
-	
 div.user_info img { padding-right: 0.1em; }
-
 div.user_info a { text-decoration: none; }
-
 div.user_info span.user_name { position: absolute; }
-
 div.user_info span.microposts { font-size: 80%; }
-
 form.new_micropost {margin-bottom: 2em; }
-
 form.new_micropost textarea { height: 4em; margin-bottom: 0;}
-
 div.colleges {font-size: 160%; color: #ff0000; }
-
 table.masthead {width: 475px; border: 0px; border-collapse: collapse; border-spacing: 10px; background-color: #ddd; border-radius: 10px;}
-
 table.masthead td {	width: 500px;font-size: 90%;padding-left: 12px;padding-right: 10px;white-space: nowrap;}
-
 td.post#title {padding: 0px;font-size: 125%;	}
-
-
-
 table.post tr td.comments {border-collapse: collapse;padding-left: 0px;padding-right: 5px;text-align: left;	}
-	
 td.vote {text-align: center;}
-	
-span.timestamp { display: block; font-size: 85%; color: #666; }
-		
+span.timestamp { display: block; font-size: 85%; color: #666; }		
 span.comments { text-align: left; }
-
 span.vote  { font-size: 275%; color: #000066; text-align: center; }
-
 textarea.comment { width: 500px; height: 100px; border: 3px solid #cccccc; padding: 5px;}
 table.comments { border-collapse:collapse;}
 table.comments tr td {	border-bottom:1px solid #CACACA; border-top:1px solid #CACACA; }
-
 table.comments tr:nth-child(even) td, table.comments tr.even td {background:#F4F4F4;}
-
 .services { margin: 0; padding: 0; }
 
 /* signin */
@@ -126,31 +96,28 @@ table.comments tr:nth-child(even) td, table.comments tr.even td {background:#F4F
 
 /* manage your services */
 #services_manage {}
-
 .service_in_use { background-color: #dddddd; height: 64px; width: 300px; margin-bottom: 10px; padding: 5px; }
 .service_img { float: left; }
 .service_userdata { font-size: 12px; line-height: 1.1em; margin-left: 80px; padding-top: 6px;}
 .service_userdata span { color: #c81419; }
-
 #services_available { clear: both; margin-top: 40px; }
 
 /* the list with the available services that consist of icons and text */
 #services_list { margin: 20px 0; padding: 0; list-style: none; }
 #services_list li { display: inline; float: left; margin-right: 25px; margin-bottom: 20px; width: 100px; text-align: center; }
 #services_list img { display: block; margin-left: auto; margin-right: auto; }
-
 a { color: #74809a; text-decoration: none !important;}
 a:visited { color: #74809a; }
 a:hover { color: #c81419; }
-
 option {font-size:85%;font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;}
 select {font-size:85%;font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;}
-
 #large_photo {display:none;}
-
 ul.button_list{list-style-type: none; display: inline-block; }
-
 div#name {display:inline;}
+
+
+
+
 
 /* Old styling 
 a { color: #09c; text-decoration: none; }
