--- a/app/views/redemptions/index.html.erb
+++ b/app/views/redemptions/index.html.erb
@@ -7,7 +7,7 @@
 		<% if signed_in? %>
 		<%= link_to "Add a Redemption", new_user_college_redemption_path(@user, @college), :method => :get, :class => "button" %>
 		<% else %>
-		<%= link_to "Add a Redemption", signin_path, :method => :get, :class => "button" %>
+		<%= link_to "Add a Redemption", user_session_path, :method => :get, :class => "button" %>
 		<% end %><br>
 			
 		<%= render 'shared/search_fields_redemptions'%>
