Fixed hidden Photo

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -116,8 +116,8 @@ ul.button_list{list-style-type: none; display: inline-block; }
 div#name {display:inline;}
 
 /* New Posts */
-#video_post {display:none;}
-#photo_post {display:none;}
+li#video_post {display:none;}
+li#photo_post {display:none;}
 #post_fields{list-style:none;}
 
 
