--- a/app/views/devise/registrations/_fields.html.erb
+++ b/app/views/devise/registrations/_fields.html.erb
@@ -1,29 +1,31 @@
 <% @college = College.all%>
 <%= render 'shared/error_messages', :object => f.object %> 
 <div class="field">
-<%= f.label :username, "Username:" %>
+<span class="required">*</span><%= f.label :username, "Username:" %>
 <%= f.text_field :username %> 
 </div>
 <div class="field" id="name">
-<%= f.label :first_name, "First Name:" %>
+<span class="required">*</span><%= f.label :first_name, "First Name:" %>
 <%= f.text_field :first_name %> 
 </div>
 <div class="field" id="name">
-<%= f.label :last_name, "Last Name:" %>
+<span class="required">*</span><%= f.label :last_name, "Last Name:" %>
 <%= f.text_field :last_name %> 
 </div><br>
 <div class="field">
-<b>Affiliation:<b>
+<span class="required">*</span><b>Affiliation:<b>
 <%= f.select(:affiliation, %w{Student Alumni Fan}, {:include_blank => true})  %>
 <b>of<b> <%= f.select(:college, @college.map {|a| [a.name]}, {:include_blank => true})  %>
 </div>
-<div class="field"> <%= f.label :email, "Email:" %>
+<div class="field">
+<span class="required">*</span><%= f.label :email, "Email:" %>
 <%= f.text_field :email %>
 </div> 
 <div class="field">
-<%= f.label :password, "Password:"  %>
+<span class="required">*</span><%= f.label :password, "Password:"  %>
 <%= f.password_field :password %> 
 </div>
-<div class="field"> <%= f.label :password_confirmation, "Password Confirmation:" %>
+<div class="field"> 
+<span class="required">*</span><%= f.label :password_confirmation, "Password Confirmation:" %>
 <%= f.password_field :password_confirmation %>
 </div>
