--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Campusmack Sign up</h1>
+<p class="required">* Required fields</p>
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %> 
  <% #devise_error_messages! %>
 <%= render 'fields', :f => f %>
