--- a/app/views/shared/_fields.html.erb
+++ b/app/views/shared/_fields.html.erb
@@ -17,13 +17,13 @@
 			<%= f.label :post_summary %><br />
 			<%= f.text_area :post_summary %> 
 		</div>
-	<li id="video_post">
+	<li id="video_field">
 		<div class="field">For a video post:<br>
 			<%= f.label :youtube_link %><br />
 			<%= f.text_field :content %> 
 		</div>
 	</li>
-	<li id="photo_post">
+	<li id="photo_field">
 		<div class="field">For a photo post:<br>
 			<%= f.label :upload_Photo %>
 			<%= f.file_field :photo %>
