--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
 	<li><%= link_to "Home", root_path %></li>
 	<li><%= link_to "My Posts", "/users/#{current_user.id}" %></li>
 	<li><%- link_to "Profile", current_user %></li>
-	<li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
+	<li><%= link_to "Edit Profile", edit_user_registration_path(current_user) %></li>
 	<li><%= link_to "Help", help_path %></li>
 	<li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
 	</ul>
