--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <title><%= title %></title>
     <%= csrf_meta_tag %>
     <%= render 'layouts/stylesheets' %>
-	<%= javascript_include_tag 'jquery', 'application', 'jquery.min', 'jquery_ujs' %>
+	<%= javascript_include_tag 'jquery', 'application', 'jquery.min', 'jquery_ujs', 'rails.validations' %>
 	<%= yield(:head) %>
   </head>
   <body>
