Fixed omniauth, cleaned up migrations

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>Welcome to campusmack.com, <%= @resource.first_name %></h1>
     <p>
-      You have signed up to campusmack.com with username: <%= @resource.username %>.<br/>
+      You have signed up to campusmack.com with username: <%= @resource.name %>.<br/>
     </p>
 
 	<p>You can confirm your account through the link below:</p>
