--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 	<tr>
 		<td class="main">
 <h1 class = "user">
-<%= @user.username %> Posts	
+<%= @user.name %> Posts
 <% #gravatar_for @user %>
 <% #@user.name %>
 </h1>
