Added back smack and redemption stuff. Allow users to edit their profile without providing a password if they used an alternative auth provider.

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -11,7 +11,7 @@
 			<span class="content"><%= youtube_embed(post.content).html_safe %></span>
 			<br>	
 				<span class="timestamp">
-					posted <%= time_ago_in_words(post.created_at) %> ago by <%= User.find(post.user_id).name %>.
+					posted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.try(:name) %>.
 					</span>
 		</td>	
 		<td class = "comments">
