--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,48 +1,52 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 <span class="required">* Required fields</span>
-<% @college = College.all%>
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }, :validate => true) do |f| %>
-  <%= devise_error_messages! %>
+<% @college = College.all %>
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:method => :put}, :validate => true) do |f| %>
+    <%= devise_error_messages! %>
 
-<div class="field">
-<span class="required">*</span><%= f.label :name, "Username:" %>
-<%= f.text_field :name %>
-</div>
-<div class="field" id="name">
-<span class="required">*</span><%= f.label :first_name, "First Name:" %>
-<%= f.text_field :first_name %> 
-</div>
-<div class="field" id="name">
-<span class="required">*</span><%= f.label :last_name, "Last Name:" %>
-<%= f.text_field :last_name %> 
-</div><br>
-<div class="field">
-<span class="required">*</span><b>Affiliation:<b>
-  <%= f.select(:affiliation, %w{Student Alumni Fan}, {:include_blank => true})  %><b> of<b> 
-  <%= f.select(:college, @college.map {|a| [a.name]}, {:include_blank => true})  %>
-</div>
-<div class="field">
-<span class="required">*</span><%= f.label :email, "Email:" %>
-<%= f.text_field :email, :validate =>{:presence => true, :confirmation => true } %>
-</div>
-<div class="field">
-  <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password %>
-</div>
-<div class="field">
-  <%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %>
-</div>
-<div class="field" id="name">
-<span class="required">*</span>
-  <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></p>
-
-  <p><%= f.submit "Update" %></p>
+    <div class="field">
+      <span class="required">*</span><%= f.label :name, "Username:" %>
+      <%= f.text_field :name %>
+    </div>
+    <div class="field" id="name">
+      <span class="required">*</span><%= f.label :first_name, "First Name:" %>
+      <%= f.text_field :first_name %>
+    </div>
+    <div class="field" id="name">
+      <span class="required">*</span><%= f.label :last_name, "Last Name:" %>
+      <%= f.text_field :last_name %>
+    </div><br>
+    <div class="field">
+      <span class="required">*</span><b>Affiliation:<b>
+      <%= f.select(:affiliation, %w{Student Alumni Fan}, {:include_blank => true}) %><b> of<b>
+      <%= f.select(:college, @college.map { |a| [a.name] }, {:include_blank => true}) %>
+    </div>
+    <div class="field">
+      <span class="required">*</span><%= f.label :email, "Email:" %>
+      <%= f.text_field :email, :validate =>{:presence => true, :confirmation => true} %>
+    </div>
+    <% if session[:provider].nil? %>
+        <div class="field">
+          <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br/>
+          <%= f.password_field :password %>
+        </div>
+        <div class="field">
+          <%= f.label :password_confirmation %>
+          <br/>
+          <%= f.password_field :password_confirmation %>
+        </div>
+        <div class="field" id="name">
+          <span class="required">*</span>
+          <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br/>
+          <%= f.password_field :current_password %></p>
+        </div>
+    <% end %>
+    <p><%= f.submit "Update" %></p>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
+<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>
+  .</p>
 
 <%= link_to "Back", :back %>
