--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 	<%= javascript_include_tag 'jquery', 'application', 'jquery.min', 'jquery_ujs', 'rails.validations' %>
 	<%= yield(:head) %>
   </head>
-  <body>
+  <body class="bp">
 	<div class="container">
 		<%= render 'layouts/header' %>
 		</div>
