--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,7 +3,7 @@
 	<td width = 15% id = "comments"class ="post">
 		<span class="content"><%= user.name %></span>
 		<span class="timestamp">
-			Posted <%= time_ago_in_words(comment.created_at) %> ago.
+			Posted <%= time_ago_in_words(comment.created_at) %> ago by <%= user.username %>.
 			</span>
 		</td>
 		<td id = "comments" class ="post">
