Changed name to username

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,8 +5,8 @@
     <%= devise_error_messages! %>
 
     <div class="field">
-      <span class="required">*</span><%= f.label :name, "Username:" %>
-      <%= f.text_field :name %>
+      <span class="required">*</span><%= f.label :username, "Username:" %>
+      <%= f.text_field :username %>
     </div>
     <div class="field" id="name">
       <span class="required">*</span><%= f.label :first_name, "First Name:" %>
