--- a/app/views/devise/registrations/_fields.html.erb
+++ b/app/views/devise/registrations/_fields.html.erb
@@ -1,8 +1,8 @@
 <% @college = College.all%>
 <%= render 'shared/error_messages', :object => f.object %> 
 <div class="field">
-<span class="required">*</span><%= f.label :name, "Username:" %>
-<%= f.text_field :name %>
+<span class="required">*</span><%= f.label :username, "Username:" %>
+<%= f.text_field :username %>
 </div>
 <div class="field" id="name">
 <span class="required">*</span><%= f.label :first_name, "First Name:" %>
