Changes in sign up/sign in process

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -8,4 +8,5 @@
 </div>
 <% end %>
 
-<%#render :partial => "devise/shared/links" %>
+<%= render :partial => "users/shared/links" %>
+<%= render :partial => "users/shared/services_list" %>
