--- a/app/views/user_mailer/support_notification.text.erb
+++ b/app/views/user_mailer/support_notification.text.erb
@@ -2,7 +2,7 @@ Welcome to campusmack.com, <%= @user.first_name %>
 ===============================================
  
 You have successfully signed up to campusmack.com,
-your username is: <%= @user.name %>.
+your username is: <%= @user.username %>.
  
 To login to the site, just follow this link: <%= @url %>.
  
