--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -7,7 +7,7 @@
     <h1>Welcome to campusmack.com, <%= @user.first_name %></h1>
     <p>
       You have successfully signed up to campusmack.com,
-      your username is: <%= @user.name %>.<br/>
+      your username is: <%= @user.username %>.<br/>
     </p>
     <p>
       To login to the site, just follow this link: <%= @url %>.
