--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
             <li><%= link_to "Sign in", new_user_session_path %></li>
         <% end %>
         </ul>
-        <% if session[:provider] %>
+        <% if user_signed_in? && session[:provider] %>
             <ul>
               <li>
               Signed in with <%= service_link(Authentication.where(:id => session[:provider]).first, 32, false) %>
