--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -49,4 +49,6 @@
 <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>
   .</p>
 
+<p><%= link_to 'Manage my alternative authentications', authentications_path %></p>
+
 <%= link_to "Back", :back %>
