--- a/app/views/shared/_fields.html.erb
+++ b/app/views/shared/_fields.html.erb
@@ -12,6 +12,12 @@
 		 	<%= f.select(:content_type, %w{Video Photo News Stats}, {:include_blank => true})  %><br />
 		</div>
 	</li>
+	<li id="news_field">
+		<div class="field">Paste in News Link:<br>
+			<%= f.label :News %>
+			<%= f.text_field :news %> 
+		</div>
+	</li>
 	<li>
 		<div class="field">
 			<%= f.label :post_summary %><br />
